tests/src/Loader/classloader/generics/Instantiation/Positive/MultipleInterface10.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    public class _generics_Instantiation_Positive_MultipleInterface10_MultipleInterface10_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Positive_MultipleInterface10_MultipleInterface10_cmd()
        {
            CoreclrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Positive\\MultipleInterface10\\MultipleInterface10.cmd");
        }
    }
}
