tests/src/Loader/classloader/generics/Instantiation/Negative/abstract07.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    public class _generics_Instantiation_Negative_abstract07_abstract07_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_abstract07_abstract07_cmd()
        {
            CoreclrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\abstract07\\abstract07.cmd");
        }
    }
}
